# guile-newra

./: .travis.yml  CMakeLists.txt  README.md  TODO  bench.scm  format.scm  newra.scm  sandbox.scm  test.scm  tools.scm  trials.scm
.github/workflows/: guile-3.0.yml
bench/: bench-blis.scm  bench.scm
config/: FindGuile.cmake
docs/: CMakeLists.txt  index.html  js_licenses.html  newra.texi
example/: maxwell.scm
examples/: maxwell.scm
mod/: newra.scm
mod/newra/: base.scm  blis.scm  cat.scm  expr.scm  ffi.scm  format.scm  from.scm  lib.scm  map-ladder.scm  map.scm  newra.scm  ploy.scm  print.scm  read.scm  reshape.scm  test.scm  tools.scm  vector.scm
mod/newra/lib/: reshape.scm
mod/newra/test/: map-ladder.scm  misc.scm
mod/test/: map-ladder.scm  misc.scm
modules/newra/: newra.scm  print.scm  tools.scm
sandbox/: README.md  example.f90  ffi.cc  ffi.scm  sandbox.scm  unique-elements.scm
test/: CMakeLists.txt  everything.scm  format.scm  maxwell.scm  test.scm
